--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -48,6 +48,13 @@ a { color: #bf2a1c; }
     }
 }
 
+.Map--full-screen {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .Content {
     position: absolute;
     top: 0;
